--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <jjwt.version>0.11.5</jjwt.version>
         <mybatis.version>3.0.1</mybatis.version>
         <liquibase.version>4.17.2</liquibase.version>
+        <preliquibase.version>1.4.0</preliquibase.version>
         <springdoc.version>2.3.0</springdoc.version>
     </properties>
 
@@ -128,13 +129,6 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
@@ -142,10 +136,24 @@
         </dependency>
 
         <dependency>
+            <groupId>net.lbruun.springboot</groupId>
+            <artifactId>preliquibase-spring-boot-starter</artifactId>
+            <version>${preliquibase.version}</version>
+        </dependency>
+
+
+        <!-- swagger -->
+        <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
 
     </dependencies>
 
